fix stretched imgs on firefox

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -843,7 +843,7 @@ input:focus {
 }
 
 .image-container {
-  display: flex;
+  display: block;
   background-color: #181817;
 }
 
